--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>NILGuard MVP</title>
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-</head>
-<body class="bg-white text-gray-800 flex items-center justify-center min-h-screen">
-  <div class="text-center px-6">
-    <h1 class="text-4xl font-bold text-red-600 mb-4">NILGuard Smart Contract Analyzer</h1>
-    <p class="text-lg text-gray-600">MVP Build: Contract Analysis + Risk Score</p>
-  </div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>NILGuard MVP</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <div class="container">
+      <h1>NILGuard Smart Contract Analyzer</h1>
+      <p>MVP Build: Contract Analysis + Risk Score</p>
+      <p>Coming Soon – Powered by IKJ Enterprises</p>
+    </div>
+  </body>
 </html>
