--- a/index.html
+++ b/index.html
@@ -1,16 +1,36 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NILGuard MVP</title>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body>
-    <div class="container">
-      <h1>NILGuard Smart Contract Analyzer</h1>
-      <p>MVP Build: Contract Analysis + Risk Score</p>
-      <p>Coming Soon – Powered by IKJ Enterprises</p>
-    </div>
-  </body>
-</html>
+<body>
+  <div class="container">
+    <h1>Welcome to NILGuard</h1>
+    <p>Your AI-powered NIL compliance tool is coming soon.</p>
+
+    <h2>Smart Contract Analyzer</h2>
+    <form id="contractForm">
+      <textarea id="contractInput" rows="10" cols="60" placeholder="Paste your NIL contract here..."></textarea><br>
+      <button type="submit">Analyze Contract</button>
+    </form>
+
+    <div id="analysisResult"></div>
+  </div>
+
+  <script>
+    document.getElementById("contractForm").addEventListener("submit", async (e) => {
+      e.preventDefault();
+      const contractText = document.getElementById("contractInput").value;
+      const resultDiv = document.getElementById("analysisResult");
+      resultDiv.innerHTML = "Analyzing...";
+
+      try {
+        const response = await fetch("https://your-backend-url/api/analyze", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ contractText }),
+        });
+
+        const data = await response.json();
+        resultDiv.innerHTML = `<pre>${JSON.stringify(data, null, 2)}</pre>`;
+      } catch (error) {
+        resultDiv.innerHTML = "❌ Error analyzing contract.";
+      }
+    });
+  </script>
+</body>
