--- a/index.html
+++ b/index.html
@@ -1,28 +1,105 @@
-const response = await fetch("https://your-backend-url/api/analyze", {
-const response = await fetch("https://nilguard-backend-production.up.railway.app/api/analyze", {
-<script>
-  document.getElementById("contractForm").addEventListener("submit", async (e) => {
-    e.preventDefault();
-    const contractText = document.getElementById("contractInput").value;
-    const resultDiv = document.getElementById("analysisResult");
-    resultDiv.innerHTML = "Analyzing...";
-
-    try {
-      const response = await fetch("https://nilguard-backend-production.up.railway.app/api/analyze", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ contractText }),
-      });
-
-      const data = await response.json();
-      resultDiv.innerHTML = `<pre>${JSON.stringify(data, null, 2)}</pre>`;
-    } catch (error) {
-      resultDiv.innerHTML = "❌ Error analyzing contract.";
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>NILGuard Smart Contract Analyzer</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f9fafb;
+      margin: 0;
+      padding: 20px;
+      display: flex;
+      justify-content: center;
     }
-  });
-</script>
+    .container {
+      max-width: 700px;
+      background: white;
+      padding: 30px;
+      border-radius: 8px;
+      box-shadow: 0 0 10px #ccc;
+      text-align: center;
+    }
+    textarea {
+      width: 100%;
+      padding: 10px;
+      font-size: 1rem;
+      margin-bottom: 15px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      resize: vertical;
+      min-height: 150px;
+    }
+    button {
+      background-color: #dc2626; /* red-600 */
+      color: white;
+      border: none;
+      padding: 10px 25px;
+      font-size: 1.1rem;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+    button:hover {
+      background-color: #b91c1c; /* red-700 */
+    }
+    #analysisResult {
+      margin-top: 20px;
+      text-align: left;
+      white-space: pre-wrap;
+      background: #f3f4f6; /* gray-100 */
+      padding: 15px;
+      border-radius: 4px;
+      min-height: 120px;
+      font-family: monospace;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h1>Welcome to NILGuard</h1>
+    <p>Your AI-powered NIL compliance tool is coming soon.</p>
 
+    <h2>Smart Contract Analyzer</h2>
+    <form id="contractForm">
+      <textarea id="contractInput" placeholder="Paste your NIL contract here..."></textarea><br />
+      <button type="submit">Analyze Contract</button>
+    </form>
+
+    <div id="analysisResult"></div>
+  </div>
+
+  <script>
+    document.getElementById("contractForm").addEventListener("submit", async (e) => {
+      e.preventDefault();
+      const contractText = document.getElementById("contractInput").value.trim();
+      const resultDiv = document.getElementById("analysisResult");
+
+      if (!contractText) {
+        resultDiv.textContent = "⚠️ Please enter the contract text to analyze.";
+        return;
+      }
+
+      resultDiv.textContent = "Analyzing...";
+
+      try {
+        const response = await fetch("https://nilguard-backend-production.up.railway.app/api/analyze", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ contractText }),
+        });
+
+        if (!response.ok) {
+          throw new Error(`HTTP error! status: ${response.status}`);
+        }
+
+        const data = await response.json();
+        resultDiv.textContent = JSON.stringify(data, null, 2);
+      } catch (error) {
+        console.error("Error:", error);
+        resultDiv.textContent = "❌ Error analyzing contract. Please try again later.";
       }
     });
   </script>
 </body>
+</html>
